Picture tipovi_linija.jpg moved to Pictures folder.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </h2>
                 <div id="collapse_deb_linija" class="accordion-collapse collapse" aria-labelledby="deb_linija" data-bs-parent="#podesavanja">
                   <div class="accordion-body">
-                    <img src="Pictures/Crtezi/tipovi_linija.jpg" width="100%" alt="Препоруке за линије у техничком цртању">
+                    <img src="Pictures/tipovi_linija.jpg" width="100%" alt="Препоруке за линије у техничком цртању">
                   </div>
                 </div>
               </div>
