--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a class="nav-link active" aria-current="page" href="#">Подешавања</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" aria-disabled="true">Заглавље</a>
+              <a class="nav-link" href="zaglavlje.html">Заглавље</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" aria-disabled="true">Котирање и шрафура</a>
