--- a/zaglavlje.html
+++ b/zaglavlje.html
@@ -33,7 +33,7 @@
               <a class="nav-link active" href="#">Заглавље</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" aria-disabled="true">Котирање и шрафура</a>
+              <a class="nav-link" href="kotiranje_srafura.html">Котирање и шрафура</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" aria-disabled="true">Цртеж вратила</a>
