crtez_vratila.htl page created with links to this page and from the page enabled. All pictures, tables and drawings added, also links to YouTube tutorials added. All jobe has been finished. I love my son Aleksej Ivkovic Cvijic very very much. I miss you to the farthest star and beyond unponderable in infinity...

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="kotiranje_srafura.html">Котирање и шрафура</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" aria-disabled="true">Цртеж вратила</a>
+              <a class="nav-link" href="crtez_vratila.html">Цртеж вратила</a>
             </li>
           </ul>
         </div>
