--- a/zaglavlje.html
+++ b/zaglavlje.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="kotiranje_srafura.html">Котирање и шрафура</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" aria-disabled="true">Цртеж вратила</a>
+              <a class="nav-link" href="crtez_vratila.html">Цртеж вратила</a>
             </li>
           </ul>
         </div>
